2009-01-29  Mark Ellis  <mark@mpellis.org.uk>

	* src/support/rapi_buffer.c - check buffer has space for trailing
	  NULL in rapi_buffer_read_string()
	* src/rapi2/registry2.c - buffer and parameter checks and fixes
	* tools/synce-registry.c - tidy up and various fixes; better display
	  and support for more value types; enable key and value delete;
	* configure.ac.in - depend on libsynce >= 0.14 for byteswap macros

2009-01-13  Mark Ellis  <mark@mpellis.org.uk>

	* 0.13.1 release
	* python/pyrapi2.pyc - flagged functions that appear in nogil
	  sections as nogil, fixes build failure with pyrex > 0.9.8.1

2009-01-10  Mark Ellis  <mark@mpellis.org.uk>

	* 0.13 release

2009-01-05  Mark Ellis  <mark@mpellis.org.uk>

	* redo functions that release the python GIL in pyrex style

2009-01-02  Mark Ellis  <mark@mpellis.org.uk>

	* check for NULL returns from wstr conversions
	* python/pyrapi2.pyx - fix warning checking for invalid handle

2008-12-18  Mark Ellis  <mark@mpellis.org.uk>

	* configure.ac.in - require at least python 2.3, pyrex doesn't
	  support 2.2; check pyrex version when python > 2.4

2008-10-29  Mark Ellis  <mark@mpellis.org.uk>

	* python/pyrapi2.pyx - enhance RAPIError exception, add error
	  checking to remaining functions

2008-10-28  Mark Ellis  <mark@mpellis.org.uk>

	* tools/pcp.c - fix for copying <source> file to <dest> dir

2008-10-27  Mark Ellis  <mark@mpellis.org.uk>

	* src/rapi_buffer.c - remove writev(), causes problems at least
	  on FreeBSD, and provides no benefit
	* configure.ac.in - remove checks for writev() and readv()

2008-09-10  Mark Ellis  <mark@mpellis.org.uk>

	* src/rapi_indirection.c - enable CeSetEndOfFile()

2008-08-19  Mark Ellis  <mark@mpellis.org.uk>

	* python/pyrapi2.pyx - don't segfault on empty strings

2008-08-11  Mark Ellis  <mark@mpellis.org.uk>

	* tools/pls.c - option for recursive listing
	* tools/man/pls.1 - man page update for recursive listing

2008-06-17  Mark Ellis  <mark@mpellis.org.uk>
